--- a/FlashBang/FlashBang/boomstick.html
+++ b/FlashBang/FlashBang/boomstick.html
@@ -297,12 +297,12 @@
 							<!-- Slideshow 1 -->
 							<div class="rslides_container">
 							  <ul class="rslides" id="slider1">
-								<li><img src="img\Boomstick\DSC03992.jpg" alt=""></li>
-								<li><img src="img\Boomstick\DSC03570.jpg" alt=""></li>
-								<li><img src="img\Boomstick\DSC03800.jpg" alt=""></li>								
-								<li><img src="img\Boomstick\DSC03916.jpg" alt=""></li>	
-								<li><img src="img\Boomstick\DSC03438.jpg" alt=""></li>
-								<li><img src="img\Boomstick\DSC03408.jpg" alt=""></li>								
+								<li><img src="img\Boomstick\DSC03992.jpeg" alt=""></li>
+								<li><img src="img\Boomstick\DSC03570.jpeg" alt=""></li>
+								<li><img src="img\Boomstick\DSC03800.jpeg" alt=""></li>								
+								<li><img src="img\Boomstick\DSC03916.jpeg" alt=""></li>	
+								<li><img src="img\Boomstick\DSC03438.jpeg" alt=""></li>
+								<li><img src="img\Boomstick\DSC03408.jpeg" alt=""></li>								
 							  </ul>
 							</div>
 						</div>
