--- a/FlashBang/FlashBang/boomstick.html
+++ b/FlashBang/FlashBang/boomstick.html
@@ -88,7 +88,7 @@
     	<h6></h6>
         <div class="row">
 		    <div class="col-md-5  text-right wow">
-            	<br><img itemprop="image" src="img/Portfolio-pic6.jpg" alt="">
+            	<br><img itemprop="image" src="img/Boomstick/Boomstick7.jpg" alt="">
             </div><br>
         	<div class="col-md-7 wow">
 				<h2 class="title" itemprop="name">Boomstick </h2><br>
@@ -297,12 +297,12 @@
 							<!-- Slideshow 1 -->
 							<div class="rslides_container">
 							  <ul class="rslides" id="slider1">
-								<li><img src="img\Boomstick\DSC03992.jpeg" alt=""></li>
-								<li><img src="img\Boomstick\DSC03570.jpeg" alt=""></li>
-								<li><img src="img\Boomstick\DSC03800.jpeg" alt=""></li>								
-								<li><img src="img\Boomstick\DSC03916.jpeg" alt=""></li>	
-								<li><img src="img\Boomstick\DSC03438.jpeg" alt=""></li>
-								<li><img src="img\Boomstick\DSC03408.jpeg" alt=""></li>								
+								<li><img src="img\Boomstick\Boomstick1.png" alt=""></li>
+								<li><img src="img\Boomstick\Boomstick2.png" alt=""></li>
+								<li><img src="img\Boomstick\Boomstick3.png" alt=""></li>								
+								<li><img src="img\Boomstick\Boomstick4.png" alt=""></li>	
+								<li><img src="img\Boomstick\Boomstick5.png" alt=""></li>
+								<li><img src="img\Boomstick\Boomstick6.png" alt=""></li>								
 							  </ul>
 							</div>
 						</div>
