--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -114,7 +114,7 @@
 			<div class="col-md-10 col-md-offset-1 wow fadeInLeft aboutus2">
 
               <p id="about2"><span class="about2">
-                Millersville University graduate and University of the Arts graduate, Rob McCabe, founded Court Ordered Productions in 2012.  After spending a few years bouncing around from band to band as a free-lance                           saxophonist, he teamed up with master guitarist and fellow UArts grad, Tim Treweek.  This partnership resulted in the creation and development of several unique musical projects.</span>            
+                Millersville University graduate and University of the Arts graduate, Rob McCabe, founded Flashbang Entertainment in 2012.  After spending a few years bouncing around from band to band as a free-lance                           saxophonist, he teamed up with master guitarist and fellow UArts grad, Tim Treweek.  This partnership resulted in the creation and development of several unique musical projects.</span>            
                 </p>                     
             </div>      
         </div><br><br>
@@ -149,39 +149,44 @@
         
 	</div>
     <div class="portfolioContainer wow">
-            	<div class=" Portfolio-box partybands">
-                	<a href="hollowpoint.html"><img src="img/Portfolio-pic1.jpg" alt=""></a>	
-                	<h3>Hollow Point</h3>
-                    <p class="desc">Electric Guitar, Sax, Flute, Electric Bass, Drums, Keyboards, Male & Female Vocals</p>
-                </div>
-                <div class="Portfolio-box triobands">
-                	<a href="boomsticktrio.html"><img src="img/Portfolio-pic2.jpg" alt=""></a>	
-                	<h3>The Boomstick Trio</h3>
-                    <p class="desc">Acoustic/Classical Guitar, Upright Bass/Violin/Acoustic Bass, Sax/Flute/Cajon, Male Vocals</p>
-                </div>
-                <div class=" Portfolio-box soloandduo">
-                	<a href="timtreweek.html"><img src="img/Portfolio-pic3.jpg" alt=""></a>	
+
+	            <div class=" Portfolio-box soloandduo">
+                	<a href="timtreweek.html"><img src="img\Tim\TimLogo.png" alt=""></a>	
                 	<h3>Tim Treweek Acoustic Entertainment</h3>
                     <p class="desc">Acoustic Guitar & Male Vocals</p>
                 </div>
+
+				<div class=" Portfolio-box soloandduo">
+                	<a href="timnrob.html"><img src="img\TimRob\TimRobLogo.jpg" alt=""></a>	
+                	<h3>Tim N' Rob</h3>
+                    <p>Acoustic Guitar, Sax, Flute, Cajon, Male Vocals</p>
+                </div>
+				
+                <div class="Portfolio-box triobands">
+                	<a href="boomsticktrio.html"><img src="img\BoomstickTrio\BoomstickTrioLogoAlt.png" alt=""></a>	
+                	<h3>The Boomstick Trio</h3>
+                    <p class="desc">Acoustic/Classical Guitar, Upright Bass/Violin/Acoustic Bass, Sax/Flute/Cajon, Male Vocals</p>
+                </div>
+
  <!--               <div class=" Portfolio-box photography" >
                 	<a href="#"><img src="img/Portfolio-pic4.jpg" alt=""></a>	
                 	<h3>Vinyl Record</h3>
                     <p class="desc">Photography</p>
                 </div>
 -->				
-                <div class=" Portfolio-box soloandduo">
-                	<a href="timnrob.html"><img src="img\TimRob\TimRobLogo.jpg" alt=""></a>	
-                	<h3>Tim N' Rob</h3>
-                    <p>Acoustic Guitar, Sax, Flute, Cajon, Male Vocals</p>
-                </div>
+
                 <div class=" Portfolio-box partybands">
-                	<a href="boomstick.html"><img src="img/Portfolio-pic6.jpg" alt=""></a>	
+                	<a href="boomstick.html"><img src="img\Boomstick\BoomstickLogoAlt.png" alt=""></a>	
                 	<h3>Boomstick</h3>
                     <p class="desc">Electric Guitar, Acoustic Guitar, Sax, Flute, Electic Bass, Full Drum Kit, Male Vocals</p>
                 </div>
+            	<div class=" Portfolio-box partybands">
+                	<a href="hollowpoint.html"><img src="img\Hollowpoint\HollowpointLogoAlt.png" alt=""></a>	
+                	<h3>Hollow Point</h3>
+                    <p class="desc">Electric Guitar, Sax, Flute, Electric Bass, Drums, Keyboards, Male & Female Vocals</p>
+                </div>				
                 <div class=" Portfolio-box bluesandrock">
-                	<a href="skinnymamie.html"><img src="img/Portfolio-pic8.jpg" alt=""></a>	
+                	<a href="skinnymamie.html"><img src="img\SkinnyMamie\SkinnyMamieLogoAlt.png" alt=""></a>	
                 	<h3>Skinny Mamie</h3>
                     <p class="desc">Electic Guitar, Sax, Flute, Hammond, Organ, Keyboards, Electric Bass, Full Drum Kit.</p>
                 </div>				
