--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -43,7 +43,9 @@
 	<!-- Custom CSS -->
 	<link href="css/custom.css" rel="stylesheet" type="text/css">
 	
-	<style></style>
+	<style>
+	.floating1{a:link:#ff6600ff; a:visited:#ff6600ff; color:#ff6600ff;}
+	</style>
     
     
 </head>
@@ -73,7 +75,7 @@
         <ul class="we-create animated fadeInUp delay-1s">
         	<li>We provide top quality live entertainment while offering you a range of options to fit your specific requests and budget. </li>
         </ul>
-		<div class="floating" style="color:#7cc576"><a href="#service"><i class=" fa-caret-square-o-down fa-5x"></i></div></a>
+		<div class="floating" style=""><a href="#service"><i class="fa-caret-square-o-down fa-5x"></i></div></a>
     </div>
 </div>
 </header><!--header-end-->
