--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -160,7 +160,7 @@
 
 				<div class=" Portfolio-box soloandduo">
                 	<a href="timnrob.html"><img src="img\TimRob\TimRobLogo.jpg" alt=""></a>	
-                	<h3>Tim N' Rob</h3>
+                	<h3>Tim & Rob</h3>
                     <p>Acoustic Guitar, Sax, Flute, Cajon, Male Vocals</p>
                 </div>
 				
