--- a/FlashBang/FlashBang/boomsticktrio.html
+++ b/FlashBang/FlashBang/boomsticktrio.html
@@ -11,7 +11,7 @@
 	<meta name="author" content="Good Candy Inc." />
 
 
-<title>Boomstick Trio - [Band] - Flashbang Entertainment</title>
+<title>Boomstick Trio - [Band] - FlashBang Entertainment</title>
 	<link rel="icon" href="favicon.png" type="image/png">
 	<link rel="shortcut icon" href="favicon.ico" type="img/x-icon">
 
@@ -93,7 +93,7 @@
         	<div class="col-md-7 wow">
 				<h2 class="title" itemprop="name">Boomstick Trio</h2><br>
                 <p class="about"><span itemprop="description"> A unique acoustic trio performs songs from a variety of genres, from Billboard Top 40 to classic jazz standards.  Also performs classical pieces upon request!  A popular choice for adding that extra special something to your wedding ceremony and cocktail hour!  Band takes requests upon booking.
-				<br><br><b>Features:</b> acoustic/classical guitar, upright bass/violin/acoustic bass, saxophone/flute/cajon, and male vocals.</span>
+				<br><br><b>Features:</b> acoustic guitar / classical guitar / upright bass / violin / acoustic bass / saxophone / flute / cajon / male vocals.</span>
 				<br><br>
                 </p>
             </div>
@@ -298,8 +298,8 @@
 							<!-- Slideshow 1 -->
 							<div class="rslides_container">
 							  <ul class="rslides" id="slider1">
-								<li><img src="img/tim1.jpg" alt=""></li>
-								<li><img src="img/tim2.jpg" alt=""></li>
+								<li><img src="./img/BoomstickTrio/BoomstickTrio1.jpg" alt=""></li>
+								<li><img src="./img/BoomstickTrio/BoomstickTrio2.png" alt=""></li>
 								<li><img src="img/tim3.jpg" alt=""></li>
 							  </ul>
 							</div>
@@ -320,7 +320,7 @@
 			<footer class="footer">
 			    <div class="container">
 			        <div class="footer-logo"><a href="#"><img src="img/logo.png" alt=""></a></div>
-			        <span class="copyright">Copyright © 2014 Flashbang Entertainment By <a href="#">The Good Candy</a>.</span>
+			        <span class="copyright">Copyright © 2014 FlashBang Entertainment By <a href="#">The Good Candy</a>.</span>
 			    </div>
 			</footer>
 			<!--Footer End-->
