--- a/FlashBang/FlashBang/hollowpoint.html
+++ b/FlashBang/FlashBang/hollowpoint.html
@@ -11,7 +11,7 @@
 	<meta name="author" content="Good Candy Inc." />
 
 
-<title>Hollow Point - [Band] - Flashbang Entertainment</title>
+<title>Hollow Point - [Band] - FlashBang Entertainment</title>
 	<link rel="icon" href="favicon.png" type="image/png">
 	<link rel="shortcut icon" href="favicon.ico" type="img/x-icon">
 
@@ -93,7 +93,7 @@
         	<div class="col-md-7 wow">
 				<h2 class="title" itemprop="name">Hollow Point</h2><br>
                 <p class="about"><span itemprop="description"> 6-piece power party band guaranteed to get everyone in the room moving!  Performs top radio hits and funk arrangements in an interesting and musical way.  The unique instrumentation and male/female vocal harmonies will crowd the dace floor until the party ends!  Band takes requests upon booking.
-				<br><br><b>Features:</b> electric guitar, saxophone/flute, electric bass, full drum kit, keyboards, male vocals, and female lead vocals.</span>
+				<br><br><b>Features:</b> electric guitar / saxophone / flute / electric bass / full drum kit / keyboards / male vocals / female lead vocals.</span>
 				<br><br>
                 </p>
             </div>
@@ -320,7 +320,7 @@
 			<footer class="footer">
 			    <div class="container">
 			        <div class="footer-logo"><a href="#"><img src="img/logo.png" alt=""></a></div>
-			        <span class="copyright">Copyright © 2014 Flashbang Entertainment By <a href="#">The Good Candy</a>.</span>
+			        <span class="copyright">Copyright © 2014 FlashBang Entertainment By <a href="#">The Good Candy</a>.</span>
 			    </div>
 			</footer>
 			<!--Footer End-->
