--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, maximum-scale=1">
 
-<title>Flashbang Entertainment</title>
+<title>FlashBang Entertainment</title>
 <link rel="icon" href="favicon.png" type="image/png">
 <link rel="shortcut icon" href="favicon.ico" type="img/x-icon">
 
@@ -71,7 +71,7 @@
 	<div class="container" id="PageTop">
     	<figure class="logo bigEntrance"><div style="height:100%; width:100%"><img src="img/logo.png" style="width:100%" alt=""></div>	
         </figure>	
-        <h1 class="">Flashbang Entertainment</h1>
+        <h1 class="">FlashBang Entertainment</h1>
         <ul class="we-create animated fadeInUp delay-1s">
         	<li>We provide top quality live entertainment while offering you a range of options to fit your specific requests and budget. </li>
         </ul>
@@ -116,7 +116,7 @@
 			<div class="col-md-10 col-md-offset-1 wow fadeInLeft aboutus2">
 
               <p id="about2"><span class="about2">
-                Millersville University graduate and University of the Arts graduate, Rob McCabe, founded Flashbang Entertainment in 2012.  After spending a few years bouncing around from band to band as a free-lance                           saxophonist, he teamed up with master guitarist and fellow UArts grad, Tim Treweek.  This partnership resulted in the creation and development of several unique musical projects.</span>            
+                Millersville University graduate and University of the Arts graduate, Rob McCabe, founded FlashBang Entertainment in 2012.  After spending a few years bouncing around from band to band as a free-lance                           saxophonist, he teamed up with master guitarist and fellow UArts grad, Tim Treweek.  This partnership resulted in the creation and development of several unique musical projects.</span>            
                 </p>                     
             </div>      
         </div><br><br>
@@ -153,7 +153,7 @@
     <div class="portfolioContainer wow">
 
 	            <div class=" Portfolio-box soloandduo">
-                	<a href="timtreweek.html"><img src="img\Tim\TimLogo.png" alt=""></a>	
+                	<a href="timtreweek.html"><img src="img\Tim\TimLogo.jpg" alt=""></a>	
                 	<h3>Tim Treweek Acoustic Entertainment</h3>
                     <p class="desc">Acoustic Guitar & Male Vocals</p>
                 </div>
@@ -201,7 +201,7 @@
 		<b class="quote-right wow"><i class="fa-quote-right"></i></b>
     	<div class="row">
         	<div class="col-lg-12">
-            	<p class="client-part-haead wow">We needed a specific kind of sound to fit our wedding. Flashbang found it.<br>	 These guys bring the fun.</p>
+            	<p class="client-part-haead wow">We needed a specific kind of sound to fit our wedding. FlashBang found it.<br>	 These guys bring the fun.</p>
             </div>
         </div>
     	<ul class="client wow">
@@ -226,7 +226,7 @@
 <footer class="footer">
     <div class="container">
         <div class="footer-logo"><a href="#"><img src="img/logo.png" alt=""></a></div>
-        <span class="copyright">Copyright © 2014 Flashbang Entertainment By <a href="#">The Good Candy</a>.</span>
+        <span class="copyright">Copyright © 2014 FlashBang Entertainment By <a href="#">The Good Candy</a>.</span>
     </div>
 </footer>
 
