--- a/FlashBang/FlashBang/skinnymamie.html
+++ b/FlashBang/FlashBang/skinnymamie.html
@@ -11,7 +11,7 @@
 	<meta name="author" content="Good Candy Inc." />
 
 
-	<title>Skinny Mamie - [Band] - Flashbang Entertainment</title>
+	<title>Skinny Mamie - [Band] - FlashBang Entertainment</title>
 	<link rel="icon" href="favicon.png" type="image/png">
 	<link rel="shortcut icon" href="favicon.ico" type="img/x-icon">
 
@@ -94,7 +94,7 @@
 				<h2 class="title" itemprop="name">Skinny Mamie</h2><br>
                 <p class="about"><span itemprop="description"> 6-piece traditional blues rock and jam band.  These guys are kicking it old school and not afraid to open up for a round of solos!  Covering songs from the 60’s and 70’s, they are sure to please any true rocker at heart.  Also features a laser and light show to bring you back to the days when rock and roll reigned supreme!
 
-				<br><br><b>Features:</b> electric guitar, saxophone/flute, Hammond organ, keyboards, electric bass, and full drum kit. </span>
+				<br><br><b>Features:</b> electric guitar / saxophone / flute / Hammond organ / keyboards / electric bass / full drum kit. </span>
 				<br><br><br><br><br>
                 </p>
             </div>
@@ -321,7 +321,7 @@
 			<footer class="footer">
 			    <div class="container">
 			        <div class="footer-logo"><a href="#"><img src="img/logo.png" alt=""></a></div>
-			        <span class="copyright">Copyright © 2014 Flashbang Entertainment By <a href="#">The Good Candy</a>.</span>
+			        <span class="copyright">Copyright © 2014 FlashBang Entertainment By <a href="#">The Good Candy</a>.</span>
 			    </div>
 			</footer>
 			<!--Footer End-->
