--- a/FlashBang/FlashBang/timnrob.html
+++ b/FlashBang/FlashBang/timnrob.html
@@ -11,7 +11,7 @@
 	<meta name="author" content="Good Candy Inc." />
 
 
-	<title>Tim & Rob - [Band] - Flashbang Entertainment</title>
+	<title>Tim & Rob - [Band] - FlashBang Entertainment</title>
 	<link rel="icon" href="favicon.png" type="image/png">
 	<link rel="shortcut icon" href="favicon.ico" type="img/x-icon">
 
@@ -94,7 +94,7 @@
 						<h2 class="title" itemprop="name">Tim & Rob</h2><br>
 						<p class="about"><span itemprop="description"> Acoustic Duo performs top radio hits and favorite classics with a unique twist in a way only Tim N’ Rob know how!  Duo takes requests upon booking.
 
-						<br><br><b>Features:</b> acoustic guitar, saxophone/flute/cajon, and male vocals.</span>
+						<br><br><b>Features:</b> acoustic guitar / saxophone / flute / cajon / male vocals.</span>
 						<br><br><br><br><br>
 						</p>
 					</div>
@@ -322,7 +322,7 @@
 			<footer class="footer">
 			    <div class="container">
 			        <div class="footer-logo"><a href="#"><img src="img/logo.png" alt=""></a></div>
-			        <span class="copyright">Copyright © 2014 Flashbang Entertainment By <a href="#">The Good Candy</a>.</span>
+			        <span class="copyright">Copyright © 2014 FlashBang Entertainment By <a href="#">The Good Candy</a>.</span>
 			    </div>
 			</footer>
 			<!--Footer End-->
