--- a/FlashBang/FlashBang/boomstick.html
+++ b/FlashBang/FlashBang/boomstick.html
@@ -11,7 +11,7 @@
 	<meta name="author" content="Good Candy Inc." />
 
 
-<title>Boomstick - [Band] - Flashbang Entertainment</title>
+<title>Boomstick - [Band] - FlashBang Entertainment</title>
 	<link rel="icon" href="favicon.png" type="image/png">
 	<link rel="shortcut icon" href="favicon.ico" type="img/x-icon">
 
@@ -93,7 +93,7 @@
         	<div class="col-md-7 wow">
 				<h2 class="title" itemprop="name">Boomstick </h2><br>
                 <p class="about"><span itemprop="description"> 5-piece power party band sure to get the audience up and dancing!  Performs top radio hits and favorite classics in an interesting and musical way.  The unique instrumentation and male vocal harmonies will leave the audience wanting more time on the dance floor!  Band takes requests upon booking.
-				<br><br><b>Features:</b> electric guitar, acoustic guitar, saxophone/flute, electric bass, full drum kit, and all male vocals.</span>
+				<br><br><b>Features:</b> electric guitar / acoustic guitar / saxophone / flute / electric bass / full drum kit / all male vocals.</span>
 				<br><br>
                 </p>
             </div>
@@ -323,7 +323,7 @@
 			<footer class="footer">
 			    <div class="container">
 			        <div class="footer-logo"><a href="#"><img src="img/logo.png" alt=""></a></div>
-			        <span class="copyright">Copyright © 2014 Flashbang Entertainment By <a href="#">The Good Candy</a>.</span>
+			        <span class="copyright">Copyright © 2014 FlashBang Entertainment By <a href="#">The Good Candy</a>.</span>
 			    </div>
 			</footer>
 			<!--Footer End-->
