--- a/FlashBang/FlashBang/timtreweek.html
+++ b/FlashBang/FlashBang/timtreweek.html
@@ -11,7 +11,7 @@
 	<meta name="author" content="Good Candy Inc." />
 
 
-	<title>Tim Treweek Acoustic Entertainment - [Band] - Flashbang Entertainment</title>
+	<title>Tim Treweek Acoustic Entertainment - [Band] - FlashBang Entertainment</title>
 	<link rel="icon" href="favicon.png" type="image/png">
 	<link rel="shortcut icon" href="favicon.ico" type="img/x-icon">
 
@@ -93,7 +93,7 @@
 			        	<div class="col-md-7 wow">
 							<h2 class="title" itemprop="name">Tim Treweek Acoustic Entertainment</h2><br>
 			                <p class="about"><span itemprop="description">  Solo act performs top radio hits and favorite classics!  Sure to please any audience when space is limited and volume control is critical.
-							<br><br><b>Features:</b> acoustic guitar and male vocals.</span>
+							<br><br><b>Features:</b> acoustic guitar / male vocals.</span>
 							<br><br><br><br><br><br><br>
 			                </p>
 			            </div>
@@ -299,7 +299,7 @@
 							<div class="rslides_container">
 							  <ul class="rslides" id="slider1">
 								<li><img src="img/tim1.jpg" alt=""></li>
-								<li><img src="img/tim2.jpg" alt=""></li>
+								<li><img src="img/Tim/Tim1.jpg" alt=""></li>
 								<li><img src="img/tim3.jpg" alt=""></li>
 							  </ul>
 							</div>
@@ -320,7 +320,7 @@
 			<footer class="footer">
 			    <div class="container">
 			        <div class="footer-logo"><a href="#"><img src="img/logo.png" alt=""></a></div>
-			        <span class="copyright">Copyright © 2014 Flashbang Entertainment By <a href="#">The Good Candy</a>.</span>
+			        <span class="copyright">Copyright © 2014 FlashBang Entertainment By <a href="#">The Good Candy</a>.</span>
 			    </div>
 			</footer>
 			<!--Footer End-->
