--- a/FlashBang/FlashBang/timtreweek.html
+++ b/FlashBang/FlashBang/timtreweek.html
@@ -299,7 +299,7 @@
 							<div class="rslides_container">
 							  <ul class="rslides" id="slider1">
 								<li><img src="img/tim1.jpg" alt=""></li>
-								<li><img src="img/Tim/Tim1.jpg" alt=""></li>
+								<li><img src="img/Tim/Tim1.png" alt=""></li>
 								<li><img src="img/tim3.jpg" alt=""></li>
 							  </ul>
 							</div>
