--- a/FlashBang/FlashBang/boomsticktrio.html
+++ b/FlashBang/FlashBang/boomsticktrio.html
@@ -298,9 +298,9 @@
 							<!-- Slideshow 1 -->
 							<div class="rslides_container">
 							  <ul class="rslides" id="slider1">
-								<li><img src="./img/BoomstickTrio/BoomstickTrio1.jpg" alt=""></li>
+								<li><img src="./img/BoomstickTrio/BoomstickTrio1.png" alt=""></li>
 								<li><img src="./img/BoomstickTrio/BoomstickTrio2.png" alt=""></li>
-								<li><img src="img/tim3.jpg" alt=""></li>
+								<li><img src="./img/BoomstickTrio/BoomstickTrio3.png" alt=""></li>
 							  </ul>
 							</div>
 						</div>
