--- a/FlashBang/FlashBang/index.html
+++ b/FlashBang/FlashBang/index.html
@@ -98,7 +98,7 @@
             <br><br><a class="link animated fadeInUp delay-1s" id="aboutbutton smooth" href="#bands" style="width:100%; margin-left:auto;margin-right:auto;text-align:center">Check Out Our Bands!</a>
             </div>
             <div class="col-md-6  text-right wow fadeInUp delay-02s">
-            	<img src="img/music.jpg" alt="">
+            	<img src="img/music.png" alt="">
             </div>
         
         </div>
