--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
             </div>
             <div class="row content-row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <form action="http://forms.brace.io/matt.stanczak@goodcandyinc.com" name="sentMessage" id="contactForm">
+                    <form method="POST" action="http://forms.brace.io/matt.stanczak@goodcandyinc.com" name="sentMessage" id="contactForm">
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Name</label>
