--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -89,7 +89,7 @@
 	.horse{margin-left:auto; margin-right:auto; width:90%;}
 	.seo{margin-top:-4px;}
 	.navbar{background-color:#222;}		
-	.navbar-fixed-top.navbar-expanded{padding:10px;}
+	.navbar-fixed-top.navbar-expanded{padding-top:10px; padding-bottom:10px;}
 	.dropdown-menu li > a:hover, .dropdown-menu li > a:focus, .dropdown-submenu:hover > a {background-color:#ef4035; color:red;}
 	.resources{padding-bottom:5px;}
 	.buttonformat{white-space: normal;width: 100%;}
