--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -66,7 +66,7 @@
 	.owl-wrapper{margin-left:auto; margin-right:auto;}
 	
 	aside.cta-quote {
-		padding:100px;
+		padding:100px 10px 100px 10px;
 		}
 	.crazybutton{
 		margin-left:-8px; width:80%;
