--- a/WebsiteDesign.html
+++ b/WebsiteDesign.html
@@ -63,7 +63,7 @@
 	.owl-wrapper{margin-left:auto; margin-right:auto;}
 	
 	aside.cta-quote {
-		padding:100px;
+		padding:100px 10px 100px 10px;
 		}
 	.crazybutton{
 		margin-left:-8px; width:80%;
@@ -207,7 +207,7 @@
 						<div class="col-md-8 col-md-offset-0" id="Bullets">
 							<ul class="" id="mobilestats">
 								<li>As of May 2013, <b>63%</b> of adult cell owners use their phones to go online.</li>
-								<li>Mobile internet usage in the US has grown by 73% over the last 12 months to reach <b>24.4%</b> in August.</li>
+								<li>Mobile internet usage in the US has grown by <b>73%</b> over the last 12 months to reach <b>24.4%</b> in August.</li>
 								<li><b>34%</b> of cell internet users go online mostly using their phones, and not using some other device such as a desktop or laptop computer.</li>
 								<li><b>1/4</b> of online purchases on Black Friday this year occurred using a mobile device.</li>
 							</ul>
@@ -243,7 +243,7 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-md-10 col-md-offset-1 wow fadeIn" data-wow-delay=".2s">
-							<span class="quote" style="color:white;">We focus on sweet and simple solutions.</span>
+							<span class="quote" style="color:white;">It is time to take action and not just do mobile, but do it right.</span>
 						</div>
 					</div>
 				</div>
