--- a/WebsiteDesign.html
+++ b/WebsiteDesign.html
@@ -223,7 +223,7 @@
 					<div class="row">
 						<div class="col-md-12 col-md-offset-0" style="text-align:left;">
 							<span class="aboutustext" style="color:black;" itemprop="text">
-							Having a Mobile Friendly Website is even known to improve Customer Retention as well as SEO (which you can learn a lot more here: <a href="SEO.html"><b>Good Candy SEO Process</b></a>). Don't let your competitors dominate the growing mobile market and get Mobile Friendly today!
+							Having a Mobile Friendly Website is even known to improve Customer Retention Rates as well as SEO (which you can learn a lot more here: <a href="SEO.html"><b>Good Candy SEO Process</b></a>). Don't let your competitors dominate the growing mobile market and get Mobile Friendly today!
 							<br><br>
 						</div>
 					</div>	
@@ -243,7 +243,7 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-md-10 col-md-offset-1 wow fadeIn" data-wow-delay=".2s">
-							<span class="quote" style="color:white;">It is time to take action and not just do mobile, but do it right.</span>
+							<span class="quote" style="color:white;">It is time to take action and not just do mobile, <b>but do it right</b>.</span>
 						</div>
 					</div>
 				</div>
