--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -382,9 +382,19 @@
     <script src="assets/js/contact_me.js"></script>
     <script src="assets/js/plugins/jqBootstrapValidation.js"></script>
 
+	<script src='assets/js/plugins/scrollReveal.min.js'></script>
+    <script>
+
+      window.sr = new scrollReveal();
+
+    </script>
+	
+	
     <!-- Vitality Theme Scripts -->
     <script src="assets/js/vitality.js"></script>
 
+	
+	
 
 </body>
 
