--- a/WebsiteDesign.html
+++ b/WebsiteDesign.html
@@ -98,6 +98,9 @@
 	#Bullets{text-align:left; margin-left:5px; font-family: 'Open Sans', sans-serif; font-size:20px;}
 	#mobilestats > li {padding-top:15px;}
 	#Bulletsimg > img {display:block; margin:auto; height:250px; max-height:100%; }
+	.moderndesignimg > img {display:block; margin:auto; height:100px; max-height:100%; }
+	.moderndesignimg1 {display:block; margin:auto; height:500px; max-height:100%; }
+	#websitechanged	{font-family: 'Open Sans', sans-serif;}
 
 	</style>
 
@@ -340,9 +343,10 @@
 				</div>
 			</aside> 
 		
-		<section class="bg-gray" id="Modern">
-        <div class="container text-center">
-            <div class="row">
+	<section class="bg-gray" id="MobileFriendly">
+        <div class="container text-center" vocab="http://schema.org/">
+            <div class="row" itemscope itemtype="http://schema.org/CreativeWork">
+			 <meta itemprop="inLanguage" content="en-US"/>
                 <div class="col-lg-12">
 				<div data-sr='wait 0.5s, then enter bottom and hustle 50px over 1s reset' id="designIcon"><i class="fa fa-cogs fa-5x"></i></div>
                     <h2 style="color:black;">Modern Design</h2>
@@ -351,15 +355,56 @@
                 </div>
 				<div class="container">
 					<div class="row">
-						<div class="col-md-12 col-md-offset-0">
-							<span class="aboutustext" style="color:black;">We reintroduce your company to the internet. We say (re) because even if you've never explored e-marketing before if you make a good product the internet knows about you. That's a fact. People talk and the web is where they're talking. What we do is get you in touch with these people through a combination strategy of web design, social media management, and SEO expertise. Our process is comprehensive and efficient.</span>
-                               <br><br> <a href="#process" class="btn btn-outline-dark crazybutton">Learn More About<br>Our Process</a>
+						<div class="col-md-12 col-md-offset-0" style="text-align:left;">
+							<span class="aboutustext" style="color:black;" itemprop="text">
+							We build our sites from the ground up. For us this means freedom from outside agencies and the design, data, and functionality restrictions that come with them. For you this means that the website you'll get will be completely customized to fit the image you're looking for as well as the specific needs of your business. 
+							<br><br>
+							You can also be sure that the site you're getting will look great and function smoothly. When your customers view your web page for the first time the experience they have there will largely influence their opinion of your business as a whole. In many cases it may even be their first impression.
+							<br><br>
+							<b><div style="text-align:center">From a competitive standpoint you can't afford for that impression to be negative in any way.</div> </b>
+							<br><br>
 						</div>
 					</div>	
+					<div class="row">	
+						<div class="col-md-4 col-md-offset-1 moderndesignimg">
+							<img data-sr='enter left move 200px reset' src="assets\img\WebDesign\frown.png" alt="" style="">
+							<h3><u>Before:</u></h2>
+							<p><a href="http://www.vinospizzapa.webs.com"><b>www.vinospizzapa.webs.com</b></a></p>
+							<h5>What kind of impression does this page leave you with?</h3>
+							<br>
+						</div>
+						<div class="col-md-1 col-md-offset-0" id="moderndesignimg1">
+							<!-- <img data-sr='enter below move 200px reset' src="assets\img\WebDesign\sign.png" alt="" style="width:100%; max-height:300px; max-width:280px">						
+							<br> -->
+							<br><br>
+						</div>
+						<div class="col-md-4 col-md-offset-1 moderndesignimg" id="">
+							<img data-sr='enter right move 200px reset' src="assets\img\WebDesign\smile.png" alt="" style="">
+							<h3><u>After:</u></h2>
+							<p><a href="http://www.vinospizzeria.com"><b>www.vinospizzeria.com</b></a></p>
+							<h5>How about this one?</h3>
+							<br>							
+	
+						</div>						
+					</div>
+					<div class="row">	
+						<div class="col-md-12 col-md-offset-0" >
+						<h3 id="websitechanged">(Also worth noting is the difference in their URLs)</h3><br><br>
+					</div>
+					</div>	
+						</span>
+					
+					
+					<div>
+						<br><h4>Check out some of our favorite resources that describe Mobile Friendly Design</h4>
+						<div data-sr='wait 1s enter left move 500px reset over 0.6s' class="resources"><a itemprop="sameAs" href="http://www.themobileplaybook.com/en-us/" class="btn btn-outline-dark crazybutton buttonformat" target="_blank" ><i class="fa fa-external-link"></i> The Mobile Playbook<br> -Google Inc.</a></div>
+						<div data-sr='wait 1s enter left move 500px reset over 1.6s' class="resources"><a itemprop="sameAs" href="http://www.huffingtonpost.com/ian-mills/5-reasons-you-absolutely-_b_5122485.html" class="btn btn-outline-dark crazybutton buttonformat" target="_blank"><i class="fa fa-external-link"></i> 5 Reasons You Absolutely Must Optimize Your Website for Mobile<br> -The Huffington Post</a></div>
+						<div data-sr='wait 1s enter left move 500px reset over 2.0s' class="resources"><a itemprop="sameAs" href="https://blog.kissmetrics.com/mobile-mania/?wide=1" class="btn btn-outline-dark crazybutton buttonformat" target="_blank"><i class="fa fa-external-link"></i> The Growing Importance of Mobile Website Optimization<br> -KISSmetrics</a></div>
+					</div>
 				</div>
             </div>
-			</div>
-		</section>  
+		</div>
+	</section>  
 		
 		 <aside class="cta-quote" style="background-image: url('assets/img/bgaside3.png');">
 				<div class="container-fluid">
