--- a/WebsiteDesign.html
+++ b/WebsiteDesign.html
@@ -31,7 +31,6 @@
     <link href="assets/css/plugins/owl-carousel/owl.carousel.css" rel="stylesheet" type="text/css">
     <link href="assets/css/plugins/owl-carousel/owl.theme.css" rel="stylesheet" type="text/css">
     <link href="assets/css/plugins/owl-carousel/owl.transitions.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/plugins/magnific-popup.css" rel="stylesheet" type="text/css">
     <link href="assets/css/plugins/jquery.fs.wallpaper.css" rel="stylesheet" type="text/css">
 
 	
@@ -263,16 +262,37 @@
 					</div>
 						<h2 style="color:black;" itemprop="name">Retina Ready</h2> <!-- Title Header -->
 						<p></p>
-						<hr class="colored">
+						<hr class="colored"><br>
 					</div>
 					<div class="container">
-						<div class="row">
-							<div class="col-md-12 col-md-offset-0">
-								<span class="aboutustext" style="color:black;" itemprop="text">
-								<!-- Section Decription -->
-								We feel that one of the truest test of quality lay in the little things. Small Details, that many overlook entirely, but when done right and brought to light with clarity and confidence can make a world of difference.<br><br>Retina Ready display is one of these details. Basically the standard screen size and resolution of most mobile devices make it difficult for the human eye to distinguish individual pixels at an optimal viewing distancy, which results in poor quality images and less then optimal user experience. At Good Candy Inc. that's simply not what we're about So to fix this, all of our websites are designed as Retina Ready Pages.
-								<!-- Section Decription End -->
-								</span>
+					<div class="row">	
+						<div class="col-md-5 col-md-offset-0 moderndesignimg">
+						<span class="aboutustext" style="color:black;" itemprop="text">
+						<div style="text-align:left;">Retina Ready display is a fairly new concept born from the minds at Apple. It is necessary because the standard screen size and resolution of mobile devices is not optimally designed for the human eye at an average viewing distance.</div><br>
+						<h3><u>Non-Retina:</u></h2><br>
+							<img data-sr='enter left move 200px reset' src="assets\img\WebDesign\nonRetina.png" alt=""  class="img-responsive">
+							<br>
+							<h5>Leaves you with blurry and ugly images</h3>
+							<br>
+						</span>
+						</div>
+						<div class="col-md-2 col-md-offset-0" id="moderndesignimg1">
+							<!-- <img data-sr='enter below move 200px reset' src="assets\img\WebDesign\sign.png" alt="" style="width:100%; max-height:300px; max-width:280px">						
+							<br> -->
+							<br><br>
+						</div>
+						<div class="col-md-5 col-md-offset-0 moderndesignimg" id="">
+						<span class="aboutustext" style="color:black;" itemprop="text">
+						<div style="text-align:left;">Coding for retina ready display basically involves programming the site to double down its pixel to screen ratio when accessed on a device with an irregular screen resolution. This is done through code at the CSS and Javascript level and is a fixture on all GCI made websites.</div>
+							<h3><u>Retina:</u></h2><br>
+							<img data-sr='enter right move 200px reset' src="assets\img\WebDesign\Retina.png" alt="" class="img-responsive">
+							<br>						
+							<h5>Keeps images crisp and clean so that your product looks great!</h3>
+							<br>							
+						</span>
+						</div>						
+					</div>								
+								
 								<br><br><br>
 								<!-- Our Favorite Links -->
 								<h4>Check out some of our favorite resources that describe Retina Ready Design</h4>
@@ -425,7 +445,6 @@
     <script src="assets/js/plugins/classie.js"></script>
     <script src="assets/js/plugins/cbpAnimatedHeader.js"></script>
     <script src="assets/js/plugins/owl-carousel/owl.carousel.js"></script>
-    <script src="assets/js/plugins/jquery.magnific-popup/jquery.magnific-popup.min.js"></script>
     <script src="assets/js/plugins/jquery.fs.wallpaper.js"></script>
     <script src="assets/js/contact_me.js"></script>
     <script src="assets/js/plugins/jqBootstrapValidation.js"></script>
