--- a/WebsiteDesign.html
+++ b/WebsiteDesign.html
@@ -90,12 +90,9 @@
 	.resources{padding-bottom:5px;}
 	.buttonformat{white-space: normal;width: 100%;}
 	
-	#mobileIcon{visibility:hidden;}
-	#retinaIcon{visibility:hidden;}
-	#speedIcon{visibility:hidden;}
-	#designIcon{visibility:hidden;}	
-	#Bullets{text-align:left; margin-left:5px; font-family: 'Open Sans', sans-serif; font-size:20px;}
-	#mobilestats > li {padding-top:15px;}
+
+	.Bullets{text-align:left; margin-left:5px; font-family: 'Open Sans', sans-serif; font-size:20px;}
+	.mobilestats > li {padding-top:15px;}
 	#Bulletsimg > img {display:block; margin:auto; height:250px; max-height:100%; }
 	.moderndesignimg > img {display:block; margin:auto; height:100px; max-height:100%; }
 	.moderndesignimg1 {display:block; margin:auto; height:500px; max-height:100%; }
@@ -206,8 +203,8 @@
 						</div>
 					</div>	
 					<div class="row">	
-						<div class="col-md-8 col-md-offset-0" id="Bullets">
-							<ul class="" id="mobilestats">
+						<div class="col-md-8 col-md-offset-0 Bullets">
+							<ul class="mobilestats">
 								<li>As of May 2013, <b>63%</b> of adult cell owners use their phones to go online.</li>
 								<li>Mobile internet usage in the US has grown by <b>73%</b> over the last 12 months to reach <b>24.4%</b> in August.</li>
 								<li><b>34%</b> of cell internet users go online mostly using their phones, and not using some other device such as a desktop or laptop computer.</li>
@@ -318,26 +315,54 @@
 			</aside> 
 		
 	<!-- Process Specific Section Begin -->
-		<section class="bg-gray" id="Speed">
+		<section class="bg-gray" id="Speedy">
 			<div class="container text-center" vocab="http://schema.org/>
 				<div class="row" itemscope itemtype="http://schema.org/CreativeWork">
 				<meta itemprop="inLanguage" content="en-US"/>
 					<div class="col-lg-12">
-					<div  data-sr='enter left move 900px reset over 0.6s' id="speedIcon"> 
-						<i class="fa fa-rocket fa-5x"></i> <!-- Icon from Font-Awesome -->
-					</div>
-						<h2 style="color:black;" itemprop="name">Speed Sells</h2> <!-- Title Header -->
-						<p></p>
-						<hr class="colored">
+						<div  data-sr='enter left move 900px reset over 0.6s' id="speedIcon"> 
+							<i class="fa fa-rocket fa-5x"></i> <!-- Icon from Font-Awesome -->
+						</div>
+							<h2 style="color:black;" itemprop="name">Speed Sells</h2> <!-- Title Header -->
+							<p></p>
+							<hr class="colored">
 					</div>
 					<div class="container">
 						<div class="row">
-							<div class="col-md-12 col-md-offset-0">
-								<span class="aboutustext" style="color:black;" itemprop="text">
+							<div class="col-md-7 col-md-offset-0" style="text-align:left;">
+								<span class="aboutustext" style="color:black; text-align:left;" itemprop="text">
 								<!-- Section Decription -->
-								It's an old saying that applies to a myriad of media based scenarios but perhaps none better than website design. Simply put, on the web speed kills. It affects key factors such as conversion rates, bounce rates, customer loyalty, and helps determine where your site belongs in the almighty search engine rankings. The sweet and simple of it is this; faster websites create happier users and longer stay times, Google aims to provide a positive experience for its users, so it likes this and therefore stack those sites higher on various keyword searches. It's a symbiotic relationship that's born with speed, is maintained by quality, and ends in exposure. The controlled positive kind. The kind that drives business. 
+								Website load time is the biggest contributing factor that separates good sites from bad sites. Internet users have short attention spans and a lot of options at their fingertips, which means they can afford not to waste their valuable web time on load screens and unresponsive pages. In fact the majority of users today expect a page to load in two seconds and each second after that represents a dramatic decline in conversion rates. Speed is also a major contributing factor toward optimizing your site for search engines or SEO. 
 								<br><br>
-								Ultimately here at the Good Candy inc. that is our goal. To drive your business. And so when it comes to speed our web design strategy is this: Lean and Mean. To us sweet and simple means efficiently maximizing the use of space on your website. We highlight what's important, the stuff that makes you unique, your edge. And once that's captured effectively, provide off page outlets for specific details and secondary information. This strategy ensures that with us you get a consistently responsive website, designed to look great, and make it easy for search engines to crawl and fully index. Together making a winning combination both for the customers you have and for the ones you want. That's the GCI advantage. 
+								</span>
+							</div>
+							<div class="col-md-5 col-md-offset-0">
+								<img src="" alt="" class="img-responsive">
+							</div>
+						</div>
+						
+						<div class="row">
+							<div class="col-md-12 col-md-offset-0 Bullets">
+								<ul class="mobilestats">
+									<li>A <b>1 second</b> delay (or 3 secs of waiting) decreases customer satisfaction by about <b>16%</b>.</li>
+									<li><b>40%</b> of internet users abandon a website that takes more than <b>3 seconds</b> to load.</li>
+									<li><b>44%</b> of online shoppers will tell their friends about a <b>bad</b> experience online.</li>
+								</ul>
+							</div>
+						</div>	
+						<br>
+						<div class="row">
+							<div class="col-md-12 col-md-offset-0" style="text-align:left;">
+								<span class="aboutustext" style="color:black; text-align:left;" itemprop="text">
+								The sweet and simple of it is this: faster websites create happier users and longer stay times, which builds customer loyalty. Search engines aim to provide a positive experience for their users, so they stack these sites higher on various keyword result listings. 
+								<br><br>
+								That's why at GCI speed is always on the forefront of our design strategy and it's all about efficiently maximizing the use of space on your website. We highlight key information and content, then provide off page outlets for specific details and secondary information. This strategy ensures that with us you get a consistently responsive website, designed to look great, draw in users, and be easy for search engines to crawl and fully index							
+								</span>
+							</div>
+						</div>		
+						<div class="row">
+							<div class="col-md-12 col-md-offset-0">						
+						
 								<!-- Section Decription End -->
 								</span>
 								<br><br><br>
