--- a/WebsiteDesign.html
+++ b/WebsiteDesign.html
@@ -342,7 +342,7 @@
 
 									
 
-									<div style="width:100%">
+									<div style="width:100%" data-sr='enter right move 200px reset'>
 										<div>
 											<canvas id="canvas" height="700" width="1000"></canvas>
 										</div>
@@ -410,9 +410,9 @@
 								<br><br><br>
 								<!-- Our Favorite Links -->
 								<h4>Check out some of our favorite resources that describe Website Speed Importance</h4>
-								<div class="resources"><a itemprop="sameAs" href="https://www.mattcutts.com/blog/site-speed/" class="btn btn-outline-dark crazybutton buttonformat" target="_blank" ><i class="fa fa-external-link"></i> Google incorporating site speed in search rankings<br> -Matt Cutts (Head of Google Webspam)</a></div>
-								<div class="resources"><a itemprop="sameAs" href="http://tools.pingdom.com/fpt/" class="btn btn-outline-dark crazybutton buttonformat" target="_blank"><i class="fa fa-external-link"></i> Test Your Current Website Speed<br> -Pingdom Tools</a></div>
-								<div class="resources"><a itemprop="sameAs" href="https://kinsta.com/learn/page-speed/" class="btn btn-outline-dark crazybutton buttonformat" target="_blank"><i class="fa fa-external-link"></i> A Beginner's Guide to Website Speed Optimization<br> -Mark Gavalda (DevOps Guy and Head Honcho at Kinsta)</a></div>
+								<div data-sr='enter left move 500px reset over 0.6s' class="resources"><a itemprop="sameAs" href="https://www.mattcutts.com/blog/site-speed/" class="btn btn-outline-dark crazybutton buttonformat" target="_blank" ><i class="fa fa-external-link"></i> Google incorporating site speed in search rankings<br> -Matt Cutts (Head of Google Webspam)</a></div>
+								<div data-sr='enter left move 500px reset over 1.6s' class="resources"><a itemprop="sameAs" href="http://tools.pingdom.com/fpt/" class="btn btn-outline-dark crazybutton buttonformat" target="_blank"><i class="fa fa-external-link"></i> Test Your Current Website Speed<br> -Pingdom Tools</a></div>
+								<div data-sr='enter left move 500px reset over 2.6s' class="resources"><a itemprop="sameAs" href="https://kinsta.com/learn/page-speed/" class="btn btn-outline-dark crazybutton buttonformat" target="_blank"><i class="fa fa-external-link"></i> A Beginner's Guide to Website Speed Optimization<br> -Mark Gavalda (DevOps Guy and Head Honcho at Kinsta)</a></div>
 						   </div>
 						</div>	
 					</div>
