--- a/Contact.html
+++ b/Contact.html
@@ -18,7 +18,7 @@
         Read more at www.formspree.io
     -->
 
-    <form method="POST" action="http://forms.brace.io/matt.stanczak@goodcandyinc.com">
+    <form method="POST" action="http://formspree.io/matt.stanczak@goodcandyinc.com">
     
         <div class="form-group">
             <label for="exampleInputName">Name</label>
