--- a/WebsiteDesign.html
+++ b/WebsiteDesign.html
@@ -343,7 +343,7 @@
 									
 
 									<div style="width:100%" data-sr='enter right move 200px reset'>
-										<div>
+										<h3>Lost Customer per Second of Load Time</h3><div>
 											<canvas id="canvas" height="700" width="1000"></canvas>
 										</div>
 									</div>
