--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -155,7 +155,7 @@
         <div class="container text-center">
             <div class="row">
                 <div class="col-lg-12">
-				<img src="./assets/img/Social.png" alt="" style="max-width:100%;">
+				<img src="./assets/img/Social/Social.svg" alt="" style="max-width:100%;">
                     <h1 style="color:black;">Social Media Management</h1>
                     <p></p>
                     <hr class="colored">
