--- a/WebsiteDesign.html
+++ b/WebsiteDesign.html
@@ -134,7 +134,7 @@
                         <a href="#about">About</a>
                     </li>
 					 <li class="dropdown">
-					  <a itemprop="url" href="index.html/#process" class="dropdown-toggle" data-toggle="dropdown"><span itemprop="name">Our Process </span<span class="caret"></span></a>
+					  <a itemprop="url" href="index.html/#process" class="dropdown-toggle" data-toggle="dropdown"><span itemprop="name">Our Process </span><span class="caret"></span></a>
 					  <ul class="dropdown-menu" role="menu" style="background-color:#222; color:white;">
 						<li class="active" style="padding:10px;"><a itemprop="url" href="#"><span itemprop="name">Website Design</span></a></li>
 						<li style="padding:10px;"><a itemprop="url" href="socialmedia.html"><span itemprop="name">Social Media Management</span></a></li>
@@ -202,24 +202,27 @@
 							<span class="aboutustext" style="color:black;" itemprop="text">
 							All Good Candy designed websites function flawlessly and look great across the full range internet ready devices. This way we ensure that no matter how your customers are viewing your website they all get the same sweet, simple look and professional experience.
 							<br><br>
+							<span>
 						</div>
 					</div>	
-					<div class="row">	
-						<div class="col-md-8 col-md-offset-0 Bullets">
-							<ul class="mobilestats">
-								<li>As of May 2013, <b>63%</b> of adult cell owners use their phones to go online.</li>
-								<li>Mobile internet usage in the US has grown by <b>73%</b> over the last 12 months to reach <b>24.4%</b> in August.</li>
-								<li><b>34%</b> of cell internet users go online mostly using their phones, and not using some other device such as a desktop or laptop computer.</li>
-								<li><b>1/4</b> of online purchases on Black Friday this year occurred using a mobile device.</li>
-							</ul>
-							<br>
-						</div>
-						<div data-sr='enter right move 200px reset' class="col-md-3 col-md-offset-0" id="Bulletsimg">
-								<img src="assets\img\WebDesign\mobile1.png" alt="" style="">
+					<div class="row">
+						<span class="aboutustext" style="color:black;" itemprop="text">
+							<div class="col-md-8 col-md-offset-0 Bullets">
+								<ul class="mobilestats">
+									<li>As of May 2013, <b>63%</b> of adult cell owners use their phones to go online.</li>
+									<li>Mobile internet usage in the US has grown by <b>73%</b> over the last 12 months to reach <b>24.4%</b> in August.</li>
+									<li><b>34%</b> of cell internet users go online mostly using their phones, and not using some other device such as a desktop or laptop computer.</li>
+									<li><b>1/4</b> of online purchases on Black Friday this year occurred using a mobile device.</li>
+								</ul>
 								<br>
-						</div>							
-					</div>	
+							</div>
+							<div data-sr='enter right move 200px reset' class="col-md-3 col-md-offset-0" id="Bulletsimg">
+									<img src="assets\img\WebDesign\mobile1.png" alt="" style="">
+									<br>
+							</div>
 						</span>
+					</div>	
+						
 					
 					<div class="row">
 						<div class="col-md-12 col-md-offset-0" style="text-align:left;">
