--- a/WebsiteDesign.html
+++ b/WebsiteDesign.html
@@ -317,7 +317,7 @@
 		
 	<!-- Process Specific Section Begin -->
 		<section class="bg-gray" id="Speedy">
-			<div class="container text-center" vocab="http://schema.org/>
+			<div class="container text-center" vocab="http://schema.org/">
 				<div class="row" itemscope itemtype="http://schema.org/CreativeWork">
 				<meta itemprop="inLanguage" content="en-US"/>
 					<div class="col-lg-12">
@@ -405,7 +405,6 @@
 							<div class="col-md-12 col-md-offset-0">						
 						
 								<!-- Section Decription End -->
-								</span>
 								<br><br><br>
 								<!-- Our Favorite Links -->
 								<h4>Check out some of our favorite resources that describe Website Speed Importance</h4>
