--- a/WebsiteDesign.html
+++ b/WebsiteDesign.html
@@ -446,8 +446,9 @@
 							<br><br>
 							You can also be sure that the site you're getting will look great and function smoothly. When your customers view your web page for the first time the experience they have there will largely influence their opinion of your business as a whole. In many cases it may even be their first impression.
 							<br><br>
-							<b><div style="text-align:center">From a competitive standpoint you can't afford for that impression to be negative in any way.</div> </b>
-							<br><br>
+							</span>
+							<div style="text-align:center"><b>From a competitive standpoint you can't afford for that impression to be negative in any way.</b></div>
+							<br><br>							
 						</div>
 					</div>	
 					<div class="row">	
