--- a/WebsiteDesign.html
+++ b/WebsiteDesign.html
@@ -535,10 +535,10 @@
                         <div class="col-md-5 col-md-offset-0">
                             <div data-sr='enter right move 200px reset' style=
                             "width:100%">
-                                <h3>Lost Customer per Second of Load Time</h3>
+                                <h3>Abandonment Rate per Second of Load Time</h3>
 
                                 <div>
-                                    <canvas height="700" id="canvas" width=
+                                    <canvas height="500" id="canvas" width=
                                     "1000"></canvas>
                                 </div>
                             </div><script>
