--- a/WebsiteDesign.html
+++ b/WebsiteDesign.html
@@ -731,7 +731,7 @@
                     <div class="row">
                         <div class="col-md-4 col-md-offset-1 moderndesignimg">
                             <img alt="" data-sr='enter left move 200px reset'
-                            src="assets/img/WebDesign/frown.png" style="">
+                            src="assets/img/WebDesign/frown1.svg" style="">
 
                             <h3 style="text-decoration: underline">Before:</h3>
 
@@ -752,7 +752,7 @@
 
                         <div class="col-md-4 col-md-offset-1 moderndesignimg">
                             <img alt="" data-sr='enter right move 200px reset'
-                            src="assets/img/WebDesign/smile.png" style="">
+                            src="assets/img/WebDesign/smile1.svg" style="">
 
                             <h3 style="text-decoration: underline">After:</h3>
 
