--- a/WebsiteDesign.html
+++ b/WebsiteDesign.html
@@ -430,7 +430,7 @@
                             Retina:</h3><br>
                             <img alt="" class="img-responsive" data-sr=
                             'enter right move 200px reset' src=
-                            "assets/img/WebDesign/Retina.png" style=
+                            "assets/img/WebDesign/retina1.svg" style=
                             "height:300px;"><br>
 
                             <h5>Keeps images crisp and clean so that your
